Fixed header heading z-index
no issue

Broke the overlay preventing focussing the editor when it was not selected.

--- a/koenig/koenig-lexical/src/styles/components/kg-header.css
+++ b/koenig/koenig-lexical/src/styles/components/kg-header.css
@@ -13,7 +13,7 @@
   }
 
   .kg-header-header-text {
-    @apply relative z-50 w-full whitespace-normal text-center font-bold leading-tight tracking-tight
+    @apply relative w-full whitespace-normal text-center font-bold leading-tight tracking-tight
   }
 
   .kg-header-header-text {
